trunk/src/rsc/backend/modules/ips/backend/parser/SnortFactoryParser.java
// $ANTLR 3.1 src/rsc/backend/modules/ips/backend/parser/SnortFactory.g 2008-09-10 18:37:32

  package rsc.backend.modules.ips.backend.parser;

  import rsc.backend.modules.ips.backend.*;
  
  import java.io.InputStream;
  import java.util.Map;
  import java.util.TreeMap;
  import java.util.Vector;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class SnortFactoryParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "NEWLINE", "VAR", "VARNAME", "IPVAR", "PORTVAR", "INCLUDE", "CONFIG", "COLON", "PREPRO", "OUTPUT", "RULES", "LB", "RB", "NEG", "SLB", "SRB", "COMMA", "ADDRESS", "SLASH", "NUMBER", "SUB", "DOT", "SYMBOL", "DIGIT", "LOWER", "UPPER", "LETTER", "WHITESPACE", "VARREF", "'->'"
    };
    public static final int SYMBOL=27;
    public static final int RB=17;
    public static final int SRB=20;
    public static final int LETTER=31;
    public static final int SLB=19;
    public static final int NUMBER=24;
    public static final int WHITESPACE=32;
    public static final int SUB=25;
    public static final int PREPRO=13;
    public static final int PORTVAR=9;
    public static final int EOF=-1;
    public static final int VARNAME=7;
    public static final int COLON=12;
    public static final int CONFIG=11;
    public static final int SLASH=23;
    public static final int T__34=34;
    public static final int NEWLINE=5;
    public static final int ADDRESS=22;
    public static final int COMMA=21;
    public static final int INCLUDE=10;
    public static final int NEG=18;
    public static final int VARREF=33;
    public static final int LB=16;
    public static final int VAR=6;
    public static final int LOWER=29;
    public static final int DIGIT=28;
    public static final int DOT=26;
    public static final int COMMENT=4;
    public static final int OUTPUT=14;
    public static final int UPPER=30;
    public static final int IPVAR=8;
    public static final int RULES=15;

    // delegates
    // delegators


        public SnortFactoryParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public SnortFactoryParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return SnortFactoryParser.tokenNames; }
    public String getGrammarFileName() { return "src/rsc/backend/modules/ips/backend/parser/SnortFactory.g"; }


        private Snortconf ret;

        public static Snortconf createInstance(InputStream is) throws Exception {
            SnortFactoryLexer lex = new SnortFactoryLexer(new ANTLRInputStream(is));
           	CommonTokenStream tokens = new CommonTokenStream(lex);

            SnortFactoryParser parser = new SnortFactoryParser(tokens);

            try {
                parser.snort();
            } catch (RecognitionException e)  {
                e.printStackTrace();
            }
            
            return null;
        }


    protected static class snort_scope {
        Snortconf conf;
    }
    protected Stack snort_stack = new Stack();


    // $ANTLR start "snort"
    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:38:1: snort : (c= comment | cc= command | e= empty )+ ;
    public final void snort() throws RecognitionException {
        snort_stack.push(new snort_scope());
        SnortFactoryParser.comment_return c = null;

        Command cc = null;



        	((snort_scope)snort_stack.peek()).conf =new Snortconf();

        try {
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:49:2: ( (c= comment | cc= command | e= empty )+ )
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:49:4: (c= comment | cc= command | e= empty )+
            {
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:49:4: (c= comment | cc= command | e= empty )+
            int cnt1=0;
            loop1:
            do {
                int alt1=4;
                switch ( input.LA(1) ) {
                case COMMENT:
                    {
                    alt1=1;
                    }
                    break;
                case VAR:
                case IPVAR:
                case PORTVAR:
                case INCLUDE:
                case CONFIG:
                case PREPRO:
                case OUTPUT:
                case RULES:
                    {
                    alt1=2;
                    }
                    break;
                case NEWLINE:
                    {
                    alt1=3;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:49:5: c= comment
            	    {
            	    pushFollow(FOLLOW_comment_in_snort51);
            	    c=comment();

            	    state._fsp--;

            	     ((snort_scope)snort_stack.peek()).conf.addComment((c!=null?input.toString(c.start,c.stop):null)); 

            	    }
            	    break;
            	case 2 :
            	    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:50:4: cc= command
            	    {
            	    pushFollow(FOLLOW_command_in_snort60);
            	    cc=command();

            	    state._fsp--;

            	     ((snort_scope)snort_stack.peek()).conf.add(cc); 

            	    }
            	    break;
            	case 3 :
            	    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:51:4: e= empty
            	    {
            	    pushFollow(FOLLOW_empty_in_snort69);
            	    empty();

            	    state._fsp--;

            	     ((snort_scope)snort_stack.peek()).conf.addComment(); 

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }


            	System.out.println("---done---\n"+((snort_scope)snort_stack.peek()).conf);
            	ret=((snort_scope)snort_stack.peek()).conf;

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            snort_stack.pop();
        }
        return ;
    }
    // $ANTLR end "snort"

    public static class comment_return extends ParserRuleReturnScope {
    };

    // $ANTLR start "comment"
    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:53:1: comment : COMMENT (~ ( '\\n' ) )* ( NEWLINE | EOF ) ;
    public final SnortFactoryParser.comment_return comment() throws RecognitionException {
        SnortFactoryParser.comment_return retval = new SnortFactoryParser.comment_return();
        retval.start = input.LT(1);

        try {
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:53:9: ( COMMENT (~ ( '\\n' ) )* ( NEWLINE | EOF ) )
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:53:11: COMMENT (~ ( '\\n' ) )* ( NEWLINE | EOF )
            {
            match(input,COMMENT,FOLLOW_COMMENT_in_comment82); 
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:53:19: (~ ( '\\n' ) )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==COMMENT||(LA2_0>=VAR && LA2_0<=34)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:53:19: ~ ( '\\n' )
            	    {
            	    if ( input.LA(1)==COMMENT||(input.LA(1)>=VAR && input.LA(1)<=34) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            if ( input.LA(1)==EOF||input.LA(1)==NEWLINE ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "comment"


    // $ANTLR start "empty"
    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:55:1: empty : NEWLINE ;
    public final void empty() throws RecognitionException {
        try {
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:55:7: ( NEWLINE )
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:55:9: NEWLINE
            {
            match(input,NEWLINE,FOLLOW_NEWLINE_in_empty102); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "empty"


    // $ANTLR start "command"
    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:57:1: command returns [Command result] : (r= rule | c= config | p= preprocessor | o= output | i= include | v= var | iv= ipvar | pv= portvar );
    public final Command command() throws RecognitionException {
        Command result = null;

        Command r = null;

        Command c = null;

        Command p = null;

        Command o = null;

        Command i = null;

        Command v = null;

        Command iv = null;

        Command pv = null;


        try {
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:58:2: (r= rule | c= config | p= preprocessor | o= output | i= include | v= var | iv= ipvar | pv= portvar )
            int alt3=8;
            switch ( input.LA(1) ) {
            case RULES:
                {
                alt3=1;
                }
                break;
            case CONFIG:
                {
                alt3=2;
                }
                break;
            case PREPRO:
                {
                alt3=3;
                }
                break;
            case OUTPUT:
                {
                alt3=4;
                }
                break;
            case INCLUDE:
                {
                alt3=5;
                }
                break;
            case VAR:
                {
                alt3=6;
                }
                break;
            case IPVAR:
                {
                alt3=7;
                }
                break;
            case PORTVAR:
                {
                alt3=8;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:58:4: r= rule
                    {
                    pushFollow(FOLLOW_rule_in_command117);
                    r=rule();

                    state._fsp--;

                     result =r; 

                    }
                    break;
                case 2 :
                    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:59:4: c= config
                    {
                    pushFollow(FOLLOW_config_in_command126);
                    c=config();

                    state._fsp--;

                     result =c; 

                    }
                    break;
                case 3 :
                    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:60:4: p= preprocessor
                    {
                    pushFollow(FOLLOW_preprocessor_in_command135);
                    p=preprocessor();

                    state._fsp--;

                     result =p; 

                    }
                    break;
                case 4 :
                    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:61:4: o= output
                    {
                    pushFollow(FOLLOW_output_in_command144);
                    o=output();

                    state._fsp--;

                     result =o; 

                    }
                    break;
                case 5 :
                    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:62:4: i= include
                    {
                    pushFollow(FOLLOW_include_in_command153);
                    i=include();

                    state._fsp--;

                     result =i; 

                    }
                    break;
                case 6 :
                    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:63:4: v= var
                    {
                    pushFollow(FOLLOW_var_in_command162);
                    v=var();

                    state._fsp--;

                     result =v; 

                    }
                    break;
                case 7 :
                    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:64:4: iv= ipvar
                    {
                    pushFollow(FOLLOW_ipvar_in_command171);
                    iv=ipvar();

                    state._fsp--;

                     result =iv; 

                    }
                    break;
                case 8 :
                    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:65:4: pv= portvar
                    {
                    pushFollow(FOLLOW_portvar_in_command180);
                    pv=portvar();

                    state._fsp--;

                     result =pv; 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "command"


    // $ANTLR start "var"
    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:67:1: var returns [Command result] : VAR na= VARNAME opts= untilnl ;
    public final Command var() throws RecognitionException {
        Command result = null;

        Token na=null;
        SnortFactoryParser.untilnl_return opts = null;


        try {
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:68:2: ( VAR na= VARNAME opts= untilnl )
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:68:4: VAR na= VARNAME opts= untilnl
            {
            match(input,VAR,FOLLOW_VAR_in_var196); 
            na=(Token)match(input,VARNAME,FOLLOW_VARNAME_in_var200); 
            pushFollow(FOLLOW_untilnl_in_var204);
            opts=untilnl();

            state._fsp--;

             result =new Var((na!=null?na.getText():null),(opts!=null?input.toString(opts.start,opts.stop):null)); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "var"


    // $ANTLR start "ipvar"
    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:70:1: ipvar returns [Command result] : IPVAR na= VARNAME a= address ;
    public final Command ipvar() throws RecognitionException {
        Command result = null;

        Token na=null;
        AddressList a = null;


        try {
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:71:2: ( IPVAR na= VARNAME a= address )
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:71:4: IPVAR na= VARNAME a= address
            {
            match(input,IPVAR,FOLLOW_IPVAR_in_ipvar220); 
            na=(Token)match(input,VARNAME,FOLLOW_VARNAME_in_ipvar224); 
            pushFollow(FOLLOW_address_in_ipvar228);
            a=address();

            state._fsp--;

             result =new AddressVar((na!=null?na.getText():null),a); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "ipvar"


    // $ANTLR start "portvar"
    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:73:1: portvar returns [Command result] : PORTVAR na= VARNAME p= port ;
    public final Command portvar() throws RecognitionException {
        Command result = null;

        Token na=null;
        PortList p = null;


        try {
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:74:2: ( PORTVAR na= VARNAME p= port )
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:74:4: PORTVAR na= VARNAME p= port
            {
            match(input,PORTVAR,FOLLOW_PORTVAR_in_portvar244); 
            na=(Token)match(input,VARNAME,FOLLOW_VARNAME_in_portvar248); 
            pushFollow(FOLLOW_port_in_portvar252);
            p=port();

            state._fsp--;

             result =new PortVar((na!=null?na.getText():null),p); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "portvar"


    // $ANTLR start "include"
    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:76:1: include returns [Command result] : INCLUDE file= untilnl ;
    public final Command include() throws RecognitionException {
        Command result = null;

        SnortFactoryParser.untilnl_return file = null;


        try {
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:77:2: ( INCLUDE file= untilnl )
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:77:4: INCLUDE file= untilnl
            {
            match(input,INCLUDE,FOLLOW_INCLUDE_in_include268); 
            pushFollow(FOLLOW_untilnl_in_include272);
            file=untilnl();

            state._fsp--;

             
            		result =new Include((file!=null?input.toString(file.start,file.stop):null)); 
            	

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "include"


    // $ANTLR start "config"
    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:82:1: config returns [Command result] : ( CONFIG na= VARNAME COLON opts= untilnl | CONFIG na= VARNAME );
    public final Command config() throws RecognitionException {
        Command result = null;

        Token na=null;
        SnortFactoryParser.untilnl_return opts = null;


        try {
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:83:2: ( CONFIG na= VARNAME COLON opts= untilnl | CONFIG na= VARNAME )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==CONFIG) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==VARNAME) ) {
                    int LA4_2 = input.LA(3);

                    if ( (LA4_2==COLON) ) {
                        alt4=1;
                    }
                    else if ( (LA4_2==EOF||(LA4_2>=COMMENT && LA4_2<=VAR)||(LA4_2>=IPVAR && LA4_2<=CONFIG)||(LA4_2>=PREPRO && LA4_2<=RULES)) ) {
                        alt4=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:83:4: CONFIG na= VARNAME COLON opts= untilnl
                    {
                    match(input,CONFIG,FOLLOW_CONFIG_in_config288); 
                    na=(Token)match(input,VARNAME,FOLLOW_VARNAME_in_config292); 
                    match(input,COLON,FOLLOW_COLON_in_config294); 
                    pushFollow(FOLLOW_untilnl_in_config298);
                    opts=untilnl();

                    state._fsp--;


                    		result =new Config((na!=null?na.getText():null),(opts!=null?input.toString(opts.start,opts.stop):null));
                    	

                    }
                    break;
                case 2 :
                    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:87:4: CONFIG na= VARNAME
                    {
                    match(input,CONFIG,FOLLOW_CONFIG_in_config306); 
                    na=(Token)match(input,VARNAME,FOLLOW_VARNAME_in_config310); 

                    		result =new Config((na!=null?na.getText():null));
                    	

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "config"


    // $ANTLR start "preprocessor"
    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:92:1: preprocessor returns [Command result] : ( PREPRO na= VARNAME COLON opts= untilnl | PREPRO na= VARNAME );
    public final Command preprocessor() throws RecognitionException {
        Command result = null;

        Token na=null;
        SnortFactoryParser.untilnl_return opts = null;


        try {
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:93:2: ( PREPRO na= VARNAME COLON opts= untilnl | PREPRO na= VARNAME )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==PREPRO) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==VARNAME) ) {
                    int LA5_2 = input.LA(3);

                    if ( (LA5_2==COLON) ) {
                        alt5=1;
                    }
                    else if ( (LA5_2==EOF||(LA5_2>=COMMENT && LA5_2<=VAR)||(LA5_2>=IPVAR && LA5_2<=CONFIG)||(LA5_2>=PREPRO && LA5_2<=RULES)) ) {
                        alt5=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 5, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:93:4: PREPRO na= VARNAME COLON opts= untilnl
                    {
                    match(input,PREPRO,FOLLOW_PREPRO_in_preprocessor326); 
                    na=(Token)match(input,VARNAME,FOLLOW_VARNAME_in_preprocessor330); 
                    match(input,COLON,FOLLOW_COLON_in_preprocessor332); 
                    pushFollow(FOLLOW_untilnl_in_preprocessor336);
                    opts=untilnl();

                    state._fsp--;


                    		result =new Preprocessor((na!=null?na.getText():null),(opts!=null?input.toString(opts.start,opts.stop):null));
                    	

                    }
                    break;
                case 2 :
                    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:97:4: PREPRO na= VARNAME
                    {
                    match(input,PREPRO,FOLLOW_PREPRO_in_preprocessor344); 
                    na=(Token)match(input,VARNAME,FOLLOW_VARNAME_in_preprocessor348); 

                    		result =new Preprocessor((na!=null?na.getText():null));
                    	

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "preprocessor"


    // $ANTLR start "output"
    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:102:1: output returns [Command result] : ( OUTPUT na= VARNAME COLON opts= untilnl | OUTPUT na= VARNAME );
    public final Command output() throws RecognitionException {
        Command result = null;

        Token na=null;
        SnortFactoryParser.untilnl_return opts = null;


        try {
            // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:103:2: ( OUTPUT na= VARNAME COLON opts= untilnl | OUTPUT na= VARNAME )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==OUTPUT) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==VARNAME) ) {
                    int LA6_2 = input.LA(3);

                    if ( (LA6_2==COLON) ) {
                        alt6=1;
                    }
                    else if ( (LA6_2==EOF||(LA6_2>=COMMENT && LA6_2<=VAR)||(LA6_2>=IPVAR && LA6_2<=CONFIG)||(LA6_2>=PREPRO && LA6_2<=RULES)) ) {
                        alt6=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 6, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:103:4: OUTPUT na= VARNAME COLON opts= untilnl
                    {
                    match(input,OUTPUT,FOLLOW_OUTPUT_in_output365); 
                    na=(Token)match(input,VARNAME,FOLLOW_VARNAME_in_output369); 
                    match(input,COLON,FOLLOW_COLON_in_output371); 
                    pushFollow(FOLLOW_untilnl_in_output375);
                    opts=untilnl();

                    state._fsp--;


                    		result =new Output((na!=null?na.getText():null),(opts!=null?input.toString(opts.start,opts.stop):null));
                    	

                    }
                    break;
                case 2 :
                    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:107:4: OUTPUT na= VARNAME
                    {
                    match(input,OUTPUT,FOLLOW_OUTPUT_in_output383); 
                    na=(Token)match(input,VARNAME,FOLLOW_VARNAME_in_output387); 

                    		result =new Output((na!=null?na.getText():null));
                    	

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "output"


    // $ANTLR start "rule"
    // src/rsc/backend/modules/ips/backend/parser/SnortFactory.g:112:1: rule returns [Command result] : r= RULES adr1= vaddress port1= vport '->' adr2= vaddress port2= vport LB opts= untilrb RB ;
    public final Command rule() throws RecognitionException {
        Command result = null;

        Token r=null;
        AddressList adr1 = null;

        PortList port1 = null;

        AddressList adr2 = null;

        PortList port2 = null;

        SnortFactoryParser.untilrb_return opts = null;

